--- a/send.html
+++ b/send.html
@@ -19,5 +19,26 @@
 
         <button type="submit">Send Message</button>
     </form>
+</br>
+
+
+<style>
+    .small-img {
+      width: 15cm;
+      height: 0%;
+    }
+  </style>
+  
+  <img src="app1.png" alt="" class="small-img">
+  
+  
+  <img src="app2.png" alt="" class="small-img">
+
+  <img src="app3.png" alt="" class="small-img">
+  
+
+  
+  <img src="app4.png" alt="" class="small-img">
+  
 </body>
 </html>
